@@ -5,6 +5,7 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libbde_dll", "libbde_dll\li
 	ProjectSection(ProjectDependencies) = postProject
 		{25C60507-39C6-4564-912D-DA2E7482A00F} = {25C60507-39C6-4564-912D-DA2E7482A00F}
 		{BC27FF34-C859-4A1A-95D6-FC89952E1910} = {BC27FF34-C859-4A1A-95D6-FC89952E1910}
+		{E2E45353-D420-4921-A2CF-59D9047262F8} = {E2E45353-D420-4921-A2CF-59D9047262F8}
 		{85005D62-6AA7-4D8A-86CB-4061B23D7C6C} = {85005D62-6AA7-4D8A-86CB-4061B23D7C6C}
 		{19446F65-5AD9-4DFB-908D-880F51B6CA06} = {19446F65-5AD9-4DFB-908D-880F51B6CA06}
 		{D6DC307C-0CA0-4144-BB19-9C43B476280F} = {D6DC307C-0CA0-4144-BB19-9C43B476280F}
@@ -88,6 +89,12 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libfguid", "libfguid\libfgu
 		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libcaes", "libcaes\libcaes.vcproj", "{E2E45353-D420-4921-A2CF-59D9047262F8}"
+	ProjectSection(ProjectDependencies) = postProject
+		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
+		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Release|Win32 = Release|Win32
@@ -146,6 +153,10 @@ Global
 		{19446F65-5AD9-4DFB-908D-880F51B6CA06}.Release|Win32.Build.0 = Release|Win32
 		{19446F65-5AD9-4DFB-908D-880F51B6CA06}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
 		{19446F65-5AD9-4DFB-908D-880F51B6CA06}.VSDebug|Win32.Build.0 = VSDebug|Win32
+		{E2E45353-D420-4921-A2CF-59D9047262F8}.Release|Win32.ActiveCfg = Release|Win32
+		{E2E45353-D420-4921-A2CF-59D9047262F8}.Release|Win32.Build.0 = Release|Win32
+		{E2E45353-D420-4921-A2CF-59D9047262F8}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
+		{E2E45353-D420-4921-A2CF-59D9047262F8}.VSDebug|Win32.Build.0 = VSDebug|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
